<resources>
    <string name="app_name">LaRaToNaSkincare</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="privacy_policy">I’m ready to glow! I agree to the Terms of Service and Privacy Policy.</string>
    <string name="create_account">Create account</string>
    <string name="remember_me">Remember me</string>
    <string name="search_skincare_categories">Search skincare categories…</string>
    <string name="categories">Categories</string>
    <string name="search_skincare_products">search skincare products...</string>
    <string name="laratona_logo">LARATONA Logo</string>
    <string name="laratona">LARATONA</string>
    <string name="welcome_to_laratona">🌿 Welcome to LARATONA 🌿\nYour Journey to Glowing Skin Starts Here ✨</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="welcome_back_user">Welcome back, Toqa!</string>
    <string name="find_what_your_skin_needs">Let\'s find what your skin needs 🌿</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="supporting">Supporting</string>
    <string name="settings">Settings</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="app_logo">App Logo</string>
    <string name="your_skin_deserves_the_best">Your Skin Deserves the Best</string>
    <string name="gentle_effective_loved">Gentle. Effective. Loved.</string>
    <string name="add_to_cart_icon">Add to Cart</string>
    <string name="delete_from_cart_icon">Delete from Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_out">Log Out</string>
    <string name="review_your_items_before_checkout">Review your items before checkout</string>
    <string name="skincare">SKINCARE</string>
    <string name="cart">CART</string>
    <string name="confirm_buy">Confirm Buy</string>
</resources>