<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7F3D0"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imVLogo"
                style="@style/activity_settings_imageView_logo" />

            <TextView
                android:id="@+id/txtSkin"
                style="@style/activity_settings_text_app_name"

                android:text="@string/laratona" />

            <TextView
                style="@style/activity_settings_text_my_profile"

                android:text="@string/my_profile" />

            <EditText
                android:id="@+id/edtUsername"
                style="@style/activity_settings_editText_log_in_sign_up"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/edtPassword"
                android:inputType="numberPassword"

                style="@style/activity_settings_editText_log_in_sign_up"
                android:hint="@string/password" />
            />

            <Button
                android:id="@+id/btnSaveButton"

                style="@style/activity_settings_button_save_changes"
                android:onClick="btnSaveButtonOnCLick"
                android:text="@string/save_changes" />

            <Button
                android:id="@+id/bntLogout"

                style="@style/activity_settings_button_log_out"
                android:onClick="bntLogoutOnCLick"
                android:text="@string/log_out" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/app_bar"
        style="@style/activity_bag_bottom_app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imVHome"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/home" />

                <TextView
                    android:id="@+id/txtHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFF4B1"
                    android:contentDescription="@string/shopping_cart"
                    android:src="@drawable/icon_shopping_cart" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imVSettings"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/settings" />

                <TextView
                    android:id="@+id/textSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
