<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7F3D0"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imVLogo"
        style="@style/activity_main_imageView_logoImage"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSkin"
        style="@style/activity_main_text_app_name"
        android:text="@string/laratona"

        app:layout_constraintBottom_toTopOf="@+id/txtWelcome"
        app:layout_constraintStart_toStartOf="@+id/imVLogo"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtWelcome"
        style="@style/activity_main_text_welcome"
        android:text="@string/welcome_to_laratona"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSkin" />


    <Button
        android:id="@+id/btnLogIn"
        style="@style/activity_main_button_log_in"
        android:onClick="btnLogInOnCLick"

        android:text="@string/log_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imVLogo" />

    <Button
        android:id="@+id/btnCreateAccount"
        style="@style/activity_main_button_sign_up"
        android:onClick="btnCreateAccountOnClick"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
