<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7F3D0"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imVLogo"
                style="@style/activity_category_imageView_logo_image"
                android:src="@drawable/laratona_logo_circle" />

            <TextView
                android:id="@+id/txtWelcomeLine1"
                style="@style/activity_category_text_welcome_line1" />

            <TextView
                android:id="@+id/txtWelcomeLine2"
                style="@style/activity_category_text_welcome_line2"
                android:text="@string/find_what_your_skin_needs" />

            <SearchView
                android:id="@+id/searchView"
                style="@style/activity_category_search_view"
                android:queryHint="@string/search_skincare_categories" />

            <TextView
                android:id="@+id/txtCategories"
                style="@style/activity_category_text_categories"
                android:text="@string/categories"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_categories"
                style="@style/activity_category_recycler_view_categories" />
            />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/app_bar"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:fabCradleVerticalOffset="6dp"
        style="@style/activity_bag_bottom_app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imVHome"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/home" />

                <TextView
                    android:id="@+id/txtHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFF4B1"
                    android:contentDescription="@string/shopping_cart"
                    android:src="@drawable/icon_shopping_cart" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imVSettings"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/settings" />

                <TextView
                    android:id="@+id/textSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>