<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7F3D0">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imVLogo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/laratona_logo"
                    android:src="@drawable/laratona_logo_circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/txtSkin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skincare"
                        android:layout_marginStart="12dp"
                        android:fontFamily="serif"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        android:textStyle="bold"                         />

                    <TextView
                        android:id="@+id/txtCare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:fontFamily="serif"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        android:textStyle="bold"                         />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtReviewConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/review_your_items_before_checkout"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <GridLayout
                android:id="@+id/girdLayCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:padding="10dp"
                android:rowOrderPreserved="false"
                android:useDefaultMargins="true" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="Total"
                android:gravity="left"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnConfirmBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="#10B981"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-medium"
                android:padding="12dp"
                android:text="@string/confirm_buy"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="#f6f6f6"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:fabCradleVerticalOffset="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imVHome"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/home" />

                <TextView
                    android:id="@+id/txtHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="#676767"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFF4B1"
                    android:contentDescription="@string/shopping_cart"
                    android:src="@drawable/icon_shopping_cart" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imVSettings"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/settings" />

                <TextView
                    android:id="@+id/textSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
